[tool.poetry]
name = "jsss"
version = "2.0.1"
description = "jsss - Python loader of JSSS"
authors = ["Tarepan"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tarepan/jsss"


[tool.poetry.dependencies]
python = "^3.6.1"
torch = "*"
torchaudio = "^0.7.0"
pytorch-lightning = "^1.0.6"
fsspec = {extras = ["s3"], version = "^0.8.4"}
requests = "^2.25.1"
tqdm = "^4.54.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
